Fix gulp copy static

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "url": "https://github.com/BlackrockDigital/startbootstrap-new-age.git"
   },
   "dependencies": {
+    "croppie": "^2.5.0",
     "simple-line-icons": "^2.3.2"
   }
 }
