--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 Django==1.11.2
-mysqlclient==1.3.10
+psycopg2==1.3.10
 django-ckeditor==5.2.2
 Pillow==4.1.1
 -e git://github.com/mariocesar/sorl-thumbnail.git@7e61948e7a987714097ba50a54120f584db9c843#egg=sorl-thumbnail
