--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,6 @@ node_modules/
 
 celerybeat-schedule
 
-bocrok/settings/local.py
-bocrok/settings/prod.py
-bocrok/settings/front.py
+bookgo/settings/local.py
+bookgo/settings/prod.py
+bookgo/settings/front.py
