--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,7 @@ oauthlib==2.1.0
 olefile==0.46
 phonenumbers==8.10.2
 Pillow==5.3.0
-psycopg2==2.7.5
+psycopg2-binary==2.8.6
 PyJWT==1.7.1
 python3-openid==3.1.0
 pytz==2018.7
